<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioRacer</string>
    <string name="title_activity_start">AudioRacer - Start</string>
    <string name="search_games_button">Join a game</string>
    <string name="player_name">Choose a player name</string>
    <string name="title_activity_join_game">AudioRacer - Join a Game</string>
    <string name="refresh_games_button">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_car">AudioRacer - Select a Car</string>
    <string name="play_sound">Play sound</string>
    <string name="title_activity_play_game">AudioRacer - Play!</string>
    
    <string name="std_ctrl">Standard</string>
    <string name="ms_ctrl">Motion Sensor</string>
    
    <string name="trim_settings">Trimm Settings</string>
    <string name="trim_settings_speed_label">Speed</string>
    <string name="trim_settings_speed_value"> +0,00</string>
    <string name="trim_settings_steering_label">Steering</string>
    <string name="trim_settings_steering_value"> +0,00</string>
    <string name="trim_settings_set_trim">Set Trim</string>
    
    <string name="ctrl_up">up</string>
    <string name="ctrl_down">down</string>
    <string name="ctrl_left">left</string>
    <string name="ctrl_right">right</string>
    <string name="joystick_ctrl">Joysticks</string>
    
    <string name="action_game_stats_list">Game stats</string>

</resources>
