<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

    <Button
        android:id="@+id/search_games_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/player_name"
        android:text="@string/search_games_button" />

    <EditText
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_games_button"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/search_games_button"
        android:ems="10"
        android:hint="@string/player_name" />

    <Button
        android:id="@+id/play_sound_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_games_button"
        android:layout_alignRight="@+id/search_games_button"
        android:layout_centerVertical="true"
        android:text="@string/play_sound" />

</RelativeLayout>
