<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9a9a9a"
    android:keepScreenOn="true"
    tools:context=".PlayGameActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
    
    <!-- Buttons -->
    
    <LinearLayout
        android:id="@+id/controls_settings"
	    style="?buttonBarStyle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:background="@color/black_overlay"
	    android:orientation="vertical"
	    tools:ignore="UselessParent" >
	    
        <!-- Buttons: Choose Controls Buttons -->
        
	    <LinearLayout 
	        android:id="@+id/choose_controls"
		    style="?buttonBarStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:background="@color/black_overlay"
		    android:orientation="horizontal"
		    tools:ignore="UselessParent" >
		    
	        <Button 
	        	android:id="@+id/std_ctrl"
	            style="?buttonBarButtonStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_weight="1"
		        android:text="@string/std_ctrl" />
	        
	        <Button 
	        	android:id="@+id/ms_ctrl"
	            style="?buttonBarButtonStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_weight="1"
		        android:text="@string/ms_ctrl" />

	        <Button
	            android:id="@+id/joystick_ctrl"
	            style="?buttonBarButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/joystick_ctrl" />
	        
	    </LinearLayout>
	    
	    <!-- End of: Buttons: Choose Controls Buttons -->
	    
	    <!-- Buttons: Settings Buttons -->
	    
	    <LinearLayout 
	        android:id="@+id/settings"
		    style="?buttonBarStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:background="@color/black_overlay"
		    android:orientation="horizontal"
		    tools:ignore="UselessParent" >
		    
	        <Button 
	        	android:id="@+id/trim_settings"
	            style="?buttonBarButtonStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_weight="1"
		        android:text="@string/trim_settings" />
	        
		</LinearLayout>
		
	    <!-- End of: Buttons: Settings Buttons -->
	    
    </LinearLayout>
    
    <!-- Buttons -->

	<!-- Views -->
	<!-- Views: Settings -->
	<!-- Views: Settings: Trim -->
	
	<LinearLayout
	    android:id="@+id/trim_settings_view"
	    style="?buttonBarStyle"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_gravity="center"
	    android:background="@color/black_overlay"
	    android:orientation="horizontal"
	    tools:ignore="UselessParent" >
	    
        <!-- Views: Settings: Trim: Speed -->
        <LinearLayout
            style="?buttonBarStyle"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"
	    	android:layout_weight="0.4"
	        android:orientation="vertical"
            >
            
            <Button 
	        	android:id="@+id/trim_settings_speed_up"
	            style="?buttonBarButtonStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_gravity="center"
		        android:layout_weight="1"
		        android:text="@string/ctrl_up" />
            
            <LinearLayout
	            style="?buttonBarStyle"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_gravity="center"
		    	android:layout_weight="1"
		        android:orientation="horizontal"
	            >
	            <TextView 
	                android:id="@+id/trim_settings_speed_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/trim_settings_speed_label" />
	            <TextView 
	                android:id="@+id/trim_settings_speed_value"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/trim_settings_speed_value" />
	        </LinearLayout>
            
            <Button 
	        	android:id="@+id/trim_settings_speed_down"
	            style="?buttonBarButtonStyle"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_gravity="center"
		        android:layout_weight="1"
		        android:text="@string/ctrl_down" />
            
        </LinearLayout>
        <!-- End of: Views: Settings: Trim: Speed -->
        <!-- Views: Settings: Trim: Steering -->
        <LinearLayout
            style="?buttonBarStyle"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"
	    	android:layout_weight="0.4"
	        android:orientation="vertical"
            >
            
            <Button 
	        	android:id="@+id/trim_settings_steering_up"
	            style="?buttonBarButtonStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_gravity="center"
		        android:layout_weight="1"
		        android:text="@string/ctrl_up" />
            
            <LinearLayout
	            style="?buttonBarStyle"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_gravity="center"
		    	android:layout_weight="1"
		        android:orientation="horizontal"
	            >
	            <TextView 
	                android:id="@+id/trim_settings_steering_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/trim_settings_steering_label" />
	            <TextView 
	                android:id="@+id/trim_settings_steering_value"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/trim_settings_steering_value" />
	        </LinearLayout>
            
            <Button 
	        	android:id="@+id/trim_settings_steering_down"
	            style="?buttonBarButtonStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_gravity="center"
		        android:layout_weight="1"
		        android:text="@string/ctrl_down" />
            
        </LinearLayout>
        <!-- End of: Views: Settings: Trim: Steering -->
        
        <Button 
        	android:id="@+id/trim_settings_set_trim"
            style="?buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:layout_weight="0.2"
	        android:text="@string/trim_settings_set_trim" />
	        
	</LinearLayout>
	<!-- End of: Views: Settings -->

    <!-- Views: Standard controls -->
    <LinearLayout
	    android:id="@+id/standard_controls"
	    style="?buttonBarStyle"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_gravity="center"
	    android:background="@color/black_overlay"
	    android:orientation="horizontal"
	    tools:ignore="UselessParent" >
	
	    <LinearLayout
	        style="?buttonBarStyle"
	        android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:layout_gravity="center"
	    	android:layout_weight="0.6"
	        android:orientation="vertical"
	    	>
	    	<Button
		    	 android:id="@+id/std_ctrl_up"
		         style="?buttonBarButtonStyle"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:layout_gravity="center"
		         android:layout_weight="1"
		         android:text="@string/ctrl_up" />
	    	<Button
		    	 android:id="@+id/std_ctrl_down"
		         style="?buttonBarButtonStyle"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:layout_gravity="center"
		         android:layout_weight="1"
		         android:text="@string/ctrl_down" />
	    </LinearLayout>
	    
	    <LinearLayout
	        style="?buttonBarStyle"
	        android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:layout_gravity="center"
	    	android:layout_weight="0.4"
	        android:orientation="horizontal"
	    	>
	        
		     <Button
		         android:id="@+id/std_ctrl_left"
		         style="?buttonBarButtonStyle"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:layout_weight="1"
		         android:text="@string/ctrl_left" />
		     
		     <Button
		         android:id="@+id/std_ctrl_right"
		         style="?buttonBarButtonStyle"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:layout_weight="1"
		         android:text="@string/ctrl_right" />
	    </LinearLayout>
	</LinearLayout>
	<!-- End of: Views: Standard controls -->
	<!-- Views: Motion sensor controls -->
	<LinearLayout
	    android:id="@+id/motion_sensor_controls"
	    style="?buttonBarStyle"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_gravity="center"
	    android:background="@color/black_overlay"
	    android:orientation="vertical"
	    tools:ignore="UselessParent" >
	    
        <ImageView 
	        android:id="@+id/ms_ctrl_img_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        />
	</LinearLayout>
	<!-- End of: Views: Motion sensor controls -->
	
	<!-- Views: Game stats list -->
	<ListView 
	   	android:id="@+id/game_stats_list_view"
	   	android:layout_width="wrap_content"
    	android:layout_height="wrap_content">
	</ListView>
	<!-- End of: View: Game stats list -->
	
	<!-- End of: Views -->

	<at.fhv.audioracer.client.android.activity.view.JoystickView
	    android:id="@+id/joystick_controls"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />

</FrameLayout>
